Bug 1386893 - Update AbstractThread thread safety assertions to work with cooperative threading (r=jwwang)

MozReview-Commit-ID: 72xKyWOUXL5